--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
   ){
 
     /* ====== MAPPA & UI BASE ====== */
-    const map = new Map({ basemap: "streets-navigation-vector" });
+    const map = new Map({ basemap: "osm" });
     const view = new MapView({
       container: "viewDiv",
       map,
@@ -1250,3 +1250,4 @@
   </script>
 </body>
 </html>
+
